# macaddr

./: AGENTS.md  Cargo.toml  README.md
src/: lib.rs  main.rs  models.rs  vendor.rs
tests/: test_macaddr.rs
