[package]
name = "macaddr"
version = "0.1.0"
edition = "2024"
description = "MAC address generation, validation, vendor lookup, and format conversion CLI"
authors = ["EdgarOrtegaRamirez"]
license = "MIT"
repository = "https://github.com/EdgarOrtegaRamirez/macaddr"
homepage = "https://github.com/EdgarOrtegaRamirez/macaddr"

[[bin]]
name = "macaddr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "2"
hex = "0.4"